--- a/src/main.css
+++ b/src/main.css
@@ -79,3 +79,56 @@ td.pw3
 {
     margin-bottom: 5px;
 }
+
+
+
+
+
+.board-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center
+}
+
+.board-content {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.board-row {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.user-selected {
+    font-weight: bold;
+}
+
+.user-selected .selected{
+    opacity: 1;
+}
+
+.selected{
+    opacity: 0;
+}
+
+.board-tag {
+    border: 2px solid white;
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    opacity: 0.6;
+    padding: 10px;
+}
+
+.board-tag.selected {
+    opacity: 1;
+    border: 4px solid #00f;
+    padding: 8px;
+}
